--- a/Grafana/grafana-baidumap-card-panel/src/lib/baidumap/card.css
+++ b/Grafana/grafana-baidumap-card-panel/src/lib/baidumap/card.css
@@ -1,19 +1,26 @@
 div.BMap_pop>div:nth-child(1)>div,
 div.BMap_pop>div:nth-child(2),
 div.BMap_pop>div:nth-child(3)>div {
-    background: #033f63 !important;
+    background: #0A5066 !important;
+}
+
+div.BMap_pop>div:nth-child(2) {
+    height: 24px !important;
 }
 
 div.BMap_pop>div:nth-child(4) {
-    opacity: 0.4;
+    opacity: 0.6;
+    background-color: #3B4845 !important;
+
 }
 
 
 /* 隐藏信息窗口底部及下指向性多边形 */
-div.BMap_pop>div:nth-child(5),
+div.BMap_pop>div:nth-child(5)>div,
 div.BMap_pop>div:nth-child(6),
-div.BMap_pop>div:nth-child(7) {
-    opacity: 0.4;
+div.BMap_pop>div:nth-child(7)>div {
+    opacity: 0.6;
+    background-color: #3B4845 !important;
 }
 
 div.BMap_pop>div:nth-child(8) {
@@ -27,11 +34,17 @@ div.BMap_pop>div:nth-child(9) {
 div.BMap_pop>div:nth-child(9) .BMap_bubble_title {
     /* line-height: 25px !important; */
     text-align: center;
-    background: #033f63;
-    color: white;
+    vertical-align: middle;
+    background: #0A5066;
+    color: #ffffff;
+    font-size: 16px;
 }
 
 /* 右上角关闭按钮 */
 div.BMap_pop>img:nth-child(10) {
     top: 8px !important;
+}
+
+div.BMap_shadow {
+    display: none !important;
 }
